--- a/ProjektApp/appsettings.json
+++ b/ProjektApp/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ProjectDbConnection": "Server=(localdb)\\mssqllocaldb;Database=ProjectAppDb;Trusted_Connection=True;MultipleActiveResultSets=true"
-    }
+    "ProjectDbConnection": "Server=(localdb)\\mssqllocaldb;Database=ProjectAppDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ProjectAppIdentityContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ProjectApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
+}
