--- a/ProjektApp/appsettings.json
+++ b/ProjektApp/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "ProjectDbConnection": "Server=(localdb)\\mssqllocaldb;Database=ProjectAppDb;Trusted_Connection=True;MultipleActiveResultSets=true",
-    "ProjectAppIdentityContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ProjectApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "ProjectAppIdentityContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ProjectApp;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ProjectAppContextConnection": "Server=(localdb)\\mssqllocaldb;Database=ProjectApp;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
