--- a/ProjektApp/ProjectApp.csproj
+++ b/ProjektApp/ProjectApp.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Folder Include="Core\Interfaces\" />
+    <Folder Include="Migrations\ProjectAppIdentity\" />
   </ItemGroup>
 
   <ItemGroup>
